tests/cases/vectors/errors/vector-trait-method-return-runtime-abi.ari
trait MakesVec {
  fn make() -> Vec[i64]
}

fn main() -> i64 {
  return 0;
}
